# ajdmom

./: .gitignore  AUTHORS  LICENSE  README.md  pyproject.toml
data/: README.md
docs/source/: 1fsv.rst  1fsvj.rst  2fsv.rst  2fsvj.rst  api.rst  conf.py  design.rst  index.rst  srjd.rst  svcj.rst  svij.rst  svvj.rst  theory.rst  usage.rst
scripts/: README.md  example1.py  example2.py  experiment1.py  experiment2.py  experiment3.py  experiment4.py  mdl_1fsv_comp.py  mdl_1fsvj_comp.py  mdl_2fsv_comp.py  mdl_2fsvj_comp.py  mdl_srjd_comp.py  usage.py
src/ajdmom/: __init__.py  cpp_mom.py  ito_cond2_mom.py  ito_cond_mom.py  ito_mom.py  itos_mom.py  poly.py  utils.py
src/ajdmom/mdl_1fsv/: __init__.py  cmom.py  cond_cmom.py  cond_joint_cmom.py  cond_joint_mom.py  cov.py  euler.py  mom.py
src/ajdmom/mdl_1fsvj/: __init__.py  cmom.py  cov.py  euler.py  mom.py
src/ajdmom/mdl_2fsv/: __init__.py  cmom.py  cov.py  euler.py  mom.py
src/ajdmom/mdl_2fsvj/: __init__.py  cmom.py  cov.py  euler.py  mom.py
src/ajdmom/mdl_srjd/: cmom.py  cond2_cmom.py  cond2_mom.py  cond_cmom.py  cond_ie_iez_cmom.py  cond_ie_iez_mom.py  cond_mom.py  euler.py  iez_cmom.py  iez_mom.py  mom.py
src/ajdmom/mdl_svcj/: cmom.py  cond2_cmom.py  cond2_mom.py  cond_cmom.py  cond_ieii_ieziziz_mom.py  cond_joint_cmom.py  cond_mom.py  (+4 more)
tests/: test_cpp_mom.py  test_ito_cond2_mom.py  test_ito_cond_mom.py  test_ito_mom.py  test_itos_mom.py  test_mdl_1fsv.py  test_mdl_1fsvj.py  test_mdl_2fsv.py  test_mdl_2fsvj.py  test_mdl_srjd.py  test_mdl_svcj.py  test_mdl_svij.py  test_mdl_svvj.py  test_poly.py  test_utils.py
(+15 files in other folders)
